Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-10359

Declarative: "Unable to assign to undefined value" when attaching the anchors of a list view delegate to its parent

    XMLWordPrintable

Details

    • bf965a3b74a10636a63f72d72ad41e169a9851e3

    Description

      See the Qml example in bug #QTBUG-10353 ( http://bugreports.nokia.troll.no/browse/QTBUG-10353 ) to reproduce the problem.

      This happens when I have something like:
      Component {
      id: delegate
      Rectangle {
      anchors.left: parent.left
      anchors.right: parent.right
      ...

      It actually works, I get the expected result which is having the rectangle in the delegate span on all the horizontal space.
      However I get a ton of these warnings anyway while scrolling and I can't see the other stuff I want to see in the debug output.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            martjone Martin Jones (closed Nokia identity) (Inactive)
            jturcott Jocelyn Turcotte
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes