Avoid warnings as delegates with bindings to parent are created and destroyed.

Task-number: QTBUG-10359